2007-01-16  Dan Winship  <danw@novell.com>

	* tests/header-parsing.c (do_request_tests, do_response_tests):
	initialize "errors" to 0. duh. Pointed out by Michael Wolf.

2007-01-08  Dan Winship  <danw@novell.com>

	* configure.in: 2.2.99

	* NEWS: update

2007-01-06  Dan Winship  <danw@novell.com>

	* libsoup/soup-headers.c (soup_headers_parse): Rewrite this to be
	easier to understand and more correct, and make the "str" param
	const rather than overwriting it during parsing.
	(soup_headers_parse_request, soup_headers_parse_response):
	Likewise, make "str" param const. Fix the doc comment to describe
	the correct constraint on str. Make the parsing slightly more
	lenient as per sections 4.1 and 19.3 of RFC 2616.

	* tests/header-parsing.c: new regression test, for Request-Line,
	Status-Line, and message-header parsing.

	Inspired by #391970 (crash in SoupServer when certain invalid
	requests are received).

2006-12-05  Dan Winship  <danw@novell.com>

	* libsoup/soup-message.c (soup_message_set_uri): Remove the calls
	to soup_message_io_stop() here; the corresponding calls were
	needed back in the SoupContext days, but they are wrong now and
	cause async-redirects-to-other-hosts to fail. #382251. Also
	clarify docs with respect to soup_session_requeue_message().

	* libsoup/soup-message-io.c (soup_message_io_stop): Clarify docs

	* libsoup/soup-session.c (finalize): Free ssl_creds. Pointed out
	by Chris Austin.

2006-11-20  Dan Winship  <danw@novell.com>

	* configure.in: 2.2.98

	* NEWS: update

2006-11-20  Dan Winship  <danw@novell.com>

	Patch from Andrew W. Nosenko:

	* libsoup/soup-message-client-io.c (parse_response_headers): Avoid
	memory leak when parse_response_headers() is called on a message
	that has a 'reason_phrase' already for some reason.

	* libsoup/soup-gnutls.c (soup_gnutls_free): Avoid memory leak:
	hostname was not freed.
	(soup_ssl_wrap_iochannel): Avoid memory leak: SoupGNUTLSChannel