@@ -1,3 +1,14 @@
+2007-02-12  Dan Winship  <danw@novell.com>
+
+	* libsoup/soup-headers.c (soup_headers_parse_status_line): Fix
+	this to handle "\0"-terminated status lines (eg, from WebDAV
+	responses), like the docs say it does. #406997
+	(soup_headers_parse): Balance that out by rejecting internal "\0"s
+	here.
+	(soup_headers_parse_request, soup_headers_parse_response): Update
+	docs to warn that @dest may be modified even on error. (This was
+	always true, it just wasn't documented.)
+
 2007-01-16  Dan Winship  <danw@novell.com>
 
 	* tests/header-parsing.c (do_request_tests, do_response_tests):
